@@ -62,20 +62,20 @@
 43,0,0,0,0,0,10,0,no,0,0,0,none,0	//AC_OWL#Owl's Eye#
 44,0,0,0,0,0,10,0,no,0,0,0,none,0	//AC_VULTURE#Vulture's Eye#
 45,0,6,4,0,1,10,1,no,0,0,0,weapon,0	//AC_CONCENTRATION#Improve Concentration#
-46,-5,8,1,-1,0,10,2,no,0,0,0,weapon,0	//AC_DOUBLE#Double Strafe#
-47,-5,6,2,-1,2,10,1,no,0,0,0,weapon,2	//AC_SHOWER#Arrow Shower#
+46,-9,8,1,-1,0,10,2,no,0,0,0,weapon,0	//AC_DOUBLE#Double Strafe#
+47,-9,6,2,-1,2,10,1,no,0,0,0,weapon,2	//AC_SHOWER#Arrow Shower#
 48,0,0,0,-1,0,10,2,no,0,0,0,weapon,0	//TF_DOUBLE#Double Attack#
 49,0,0,0,0,0,10,0,no,0,0,0,weapon,0	//TF_MISS#Improve Dodge#
 50,1,6,1,0,1,10,1,no,0,0,0,weapon,0	//TF_STEAL#Steal#
 51,1,6,4,0,1,10,1,no,0,0,0,none,0	//TF_HIDING#Hiding#
-52,2,6,1,5,0,10,1,no,0,0,0,weapon,0	//TF_POISON#Envenom#
+52,-2,6,1,5,0,10,1,no,0,0,0,weapon,0	//TF_POISON#Envenom#
 53,9,6,16,5,1,1,1,no,0,0,0,weapon,0	//TF_DETOXIFY#Detoxify#
 54,9,6,16,6,1,4,1,yes,0,0,0,magic,0	//ALL_RESURRECTION#Resurrection#
 55,0,0,0,0,0,10,0,no,0,0,0,weapon,0	//KN_SPEARMASTERY#Spear Mastery#
-56,-1,8,1,-1,0,10,3,no,0,0,0,weapon,0	//KN_PIERCE#Pierce#
-57,1,6,1,-1,1,10,1,no,33,0,0,weapon,3	//KN_BRANDISHSPEAR#Brandish Spear#
-58,-3,6,1,-1,2,10,1,no,0,0,0,weapon,6	//KN_SPEARSTAB#Spear Stab#
-59,-3:-5:-7:-9:-11,6,1,-1,0,5,1,no,0,0,0,weapon,0	//KN_SPEARBOOMERANG#Spear Boomerang#
+56,-2,8,1,-1,0,10,3,no,0,0,0,weapon,0	//KN_PIERCE#Pierce#
+57,-2,6,1,-1,1,10,1,no,33,0,0,weapon,3	//KN_BRANDISHSPEAR#Brandish Spear#
+58,-4,6,1,-1,2,10,1,no,0,0,0,weapon,6	//KN_SPEARSTAB#Spear Stab#
+59,3:5:7:9:11,6,1,-1,0,5,1,no,0,0,0,weapon,0	//KN_SPEARBOOMERANG#Spear Boomerang#
 60,0,6,4,0,1,10,1,no,0,0,0,weapon,0	//KN_TWOHANDQUICKEN#Twohand Quicken#
 61,0,6,4,-1,1,5,1,no,0,0,0,weapon,0	//KN_AUTOCOUNTER#Counter Attack#
 62,-2,6,1,-1,2,10,1,no,33,0,0,weapon,1:1:2:2:3:3:4:4:5:5 //KN_BOWLINGBASH#Bowling Bash#
@@ -287,7 +287,7 @@
 268,0,6,4,0,1,5,1,no,0,0,0,weapon,0	//MO_STEELBODY#Mental Strength#
 269,0,6,4,0,1,5,1,no,0,0,0,weapon,0	//MO_BLADESTOP#Root#
 270,0,6,4,0,1,5,0,no,0,0,0,weapon,0	//MO_EXPLOSIONSPIRITS#Fury#
-271,2,6,4,0,0,5,1,yes,0,0,0,weapon,0	//MO_EXTREMITYFIST#Asura Strike#
+271,-2,6,4,0,0,5,1,yes,0,0,0,weapon,0	//MO_EXTREMITYFIST#Asura Strike#
 272,-2,8,4,-1,0,5,4,no,0,0,0,weapon,0	//MO_CHAINCOMBO#Raging Quadruple Blow#
 273,-2,6,4,-1,0,5,1,no,0,0,0,weapon,0	//MO_COMBOFINISH#Raging Thrust#
 274,0,0,0,0,0,10,0,no,0,0,0,weapon,0	//SA_ADVANCEDBOOK#Study#
